// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-blHHSb cSkiXb"
    disabled=""
    variant="secondary"
  />
</DocumentFragment>
`;

exports[`Button render primary small 1`] = `
<DocumentFragment>
  <button
    class="sc-blHHSb dCeyxJ"
    variant="primary"
  />
</DocumentFragment>
`;

exports[`Button render tertiary large 1`] = `
<DocumentFragment>
  <button
    class="sc-blHHSb eZapBy"
    variant="tertiary"
  />
</DocumentFragment>
`;
